--- a/cse513/p2p_centralized/Makefile
+++ b/cse513/p2p_centralized/Makefile
@@ -2,7 +2,8 @@ CC = gcc
 CFLAGS = -g -D_REENTRANT -D__PTHREAD__
 CFLAGS += $(INCLUDES)
 LEX = lex
-LIBS    += -lnsl -lsocket -lpthread
+#LIBS    += -lnsl -lsocket -lpthread
+LIBS    += -lpthread
 INCLUDES = -I./include
 SRC     = ./src
 SERVER = $(SRC)/server.c $(SRC)/tcp.c $(SRC)/fifo.c
